
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    fab:ignore="MergeRootFrame">

  <com.sam_chordas.android.stockhawk.ui.EmptyRecyclerView
      android:id="@+id/recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />


    <com.melnykov.fab.FloatingActionButton
      android:id="@+id/fab"
      android:contentDescription="@string/add_stock"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
      android:layout_margin="16dp"
      android:src="@drawable/ic_add_white_24dp"
      fab:fab_colorNormal="@color/material_blue_500"
      fab:fab_colorPressed="@color/material_blue_600"
      fab:fab_colorRipple="@color/ripple"
      fab:fab_shadow="true"
      fab:fab_type="normal"
      fab:layout_anchor="recycler_view"
      fab:layout_anchorGravity="bottom | end"
      />

    <LinearLayout
        android:id="@+id/empty_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_view"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/server_down_image"
            android:layout_width="200dp"
            android:layout_height="217dp"
            android:src="@drawable/signal_tower"
            android:contentDescription="@string/signal_tower"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/server_down_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_down"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>

</FrameLayout>
